@@ -3,6 +3,8 @@ Changelog
 
 2.4.dev0 - (unreleased)
 -----------------------
+* Feature: Added LDAP specific properties to local users
+  [olimpiurob refs #24190]
 * Upgrade step: (manual) Enable user registration in @@security-controlpanel. Tick
   Enable self-registration, Let users select their own passwords and Use email address as login name
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
